--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "embla-carousel-react": "^8.5.2",
     "flyonui": "^1.3.0",
     "framer-motion": "^12.4.10",
-    "infinite-react-carousel": "^1.2.11",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
