--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lucide-react": "^0.476.0",
     "mongodb": "^6.15.0",
     "motion": "^12.6.2",
-    "next": "15.1.7",
+    "next": "^15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
